--- a/pom.xml
+++ b/pom.xml
@@ -18,4 +18,18 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <scm>
+    <connection>scm:git:git@github.com:marccousineau/Auto-CRM.git</connection>
+    <url>scm:git:git@github.com:marccousineau/Auto-CRM</url>
+    <developerConnection>scm:git:git@github.com:marccousineau/Auto-CRM</developerConnection>
+  </scm>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.0-beta-9</version>
+      </plugin>
+    </plugins>
+  </build>
 </project>
